syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.widedelivery.order.service";
option java_outer_classname = "OrderProto";

package com.widedelivery.order.service;

import "com.widedelivery.order/rpc_create_order.proto";
import "com.widedelivery.order/rpc_get_matched_orders.proto";
import "com.widedelivery.order/rpc_add_driver_to_matching.proto";
import "com.widedelivery.order/rpc_remove_driver_from_matching.proto";
import "com.widedelivery.order/rpc_link_driver_with_order.proto";
import "com.widedelivery.order/order.proto";

service OrderService {
  rpc CreateOrder(com.widedelivery.order.proto.CreateOrderInput) returns (com.widedelivery.order.proto.CreateOrderResponse) {}
  rpc GetOrder(GetOrderInput) returns (com.widedelivery.order.proto.OrderResponse) {}
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse) {}
  rpc SearchOrders(SearchOrdersRequest) returns (SearchOrdersResponse) {}
  rpc deleteOrder(DeleteOrderInput) returns (com.widedelivery.order.proto.GenericResponse) {}
  rpc UpdateOrder(UpdateOrderInput) returns (com.widedelivery.order.proto.OrderResponse) {}



  rpc AddDriverForMatching(com.widedelivery.order.proto.AddDriverToMatchingInput) returns (com.widedelivery.order.proto.GenericResponse) {}
  rpc RemoveDriverFromMatching(com.widedelivery.order.proto.RemoveDriverFromMatchingInput) returns (com.widedelivery.order.proto.GenericResponse) {}
  rpc GetMatchedOrders(com.widedelivery.order.proto.GetMatchedOrdersInput) returns (stream com.widedelivery.order.proto.GetMatchedOrdersOutput) {}

  rpc LinkDriverWithOrder(com.widedelivery.order.proto.LinkDriverWithOrderInput) returns (com.widedelivery.order.proto.OrderResponse) {}
}

message UpdateOrderInput {
  string order_id = 1;
  com.widedelivery.order.proto.CreateOrderInput order = 2;
}

message DeleteOrderInput {
  string order_id = 1;
}

message GetOrderInput {
  string order_id = 1;
}

message GetOrdersRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

message GetOrdersResponse {
  repeated proto.Order orders = 1;
  int32 total_pages = 2;
  int32 current_page = 3;
}

message SearchOrdersRequest {
  map<string, string> search_params = 1;
  int32 page_number = 2;
  int32 page_size = 3;
}

message SearchOrdersResponse {
  repeated proto.Order orders = 1;
  int32 total_pages = 2;
  int32 current_page = 3;
}
